--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ APP_SECRET=76fee88ee2c92447eb1ca9fe52852030
 # .env (or override DATABASE_URL in .env.local to avoid committing your changes)
 
 # customize this line!
-DATABASE_URL="mysql://root@127.0.0.1:3306/db_school"
+DATABASE_URL="mysql://root@127.0.0.1:3306/db_shop"
 # to use mariadb:
 # Before doctrine/dbal < 3.7
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=mariadb-10.5.8"
@@ -45,7 +45,6 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/db_school"
 
 MAILER_DSN=smtp://localhost:1025
 
-MAILER_DSN=smtp://mehediasan45@gmail.com:snrbgglweoorexdu@smtp.gmail.com:587
 
 # to use postgresql:
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
